deployment/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: DEPLOYMENT_ID
  annotations:
    app.kubernetes.io/part-of: DEPLOYMENT_ID
spec:
  selector:
    matchLabels:
      app: DEPLOYMENT_ID
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: DEPLOYMENT_ID
      annotations:
        git.commit/id: COMMIT_ID
    spec:
      imagePullSecrets:
        - name: registry-ghcr-carlspring-com
      containers:
        - name: DEPLOYMENT_ID
          image: IMAGE_NAME
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          resources:
            requests:
              memory: MEMORY_REQUEST
            limits:
              memory: MEMORY_LIMIT
---
apiVersion: v1
kind: Service
metadata:
  name: DEPLOYMENT_ID
  annotations:
    app.kubernetes.io/part-of: DEPLOYMENT_ID
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: DEPLOYMENT_ID
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: DEPLOYMENT_ID_redirect-to-https-ingress
  annotations:
    app.kubernetes.io/part-of: DEPLOYMENT_ID
    traefik.ingress.kubernetes.io/router.entrypoints: http
    traefik.ingress.kubernetes.io/router.middlewares: argocd-http-middleware-chain@kubernetescrd
spec:
  rules:
    - host: DOMAIN
      http:
        paths:
          - backend:
              service:
                name: DEPLOYMENT_ID
                port:
                  name: http
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: DEPLOYMENT_ID_https-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.middlewares: argocd-https-middleware-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production-carlspring"
spec:
  tls:
    - hosts:
        - carlspring.org
        - "*.carlspring.org"
        - "*.argocd.carlspring.org"
      secretName: carlspring-org-production-tls
      #secretName: carlspring-org-staging-tls
  rules:
    - host: DEPLOYMENT_ID.carlspring.org
      http:
        paths:
          - backend:
              service:
                name: DEPLOYMENT_ID
                port:
                  name: http
            pathType: ImplementationSpecific
